--- a/index.comparacao.html
+++ b/index.comparacao.html
@@ -9,6 +9,7 @@
   :root{
     --bg:#f6f8fb; --ink:#0f172a; --muted:#64748b; --card:#fff; --primary:#0ea5e9;
     --red:#dc2626; --amber:#f59e0b; --ok:#16a34a; --line:#e5e7eb;
+    --chart-h: 200px; /* altura padrão dos gráficos */
   }
   *{box-sizing:border-box}
   body{margin:0;background:var(--bg);color:var(--ink);font-family:'Segoe UI',system-ui,-apple-system,sans-serif}
@@ -17,29 +18,35 @@
   .filters{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:10px;margin:0 0 14px}
   select,input[type="month"],button{padding:10px;border-radius:10px;border:1px solid #cbd5e1;font-size:14px;background:#fff}
   button{background:var(--primary);color:#fff;border:none;cursor:pointer}
-
   .grid{display:grid;gap:14px}
   .card{background:var(--card);border-radius:14px;padding:12px;box-shadow:0 1px 8px rgba(0,0,0,.06)}
   .title{font-weight:800;margin:2px 2px 10px}
   .small{color:var(--muted);font-size:12px}
+  .charts{display:grid;grid-template-columns:1fr;gap:14px}
+  canvas{width:100%;height:var(--chart-h)}
+  /* celular: gráficos menores */
+  @media (max-width:600px){ :root{ --chart-h: 150px; } }
 
   /* tabela estilo planilha */
   .table-wrap{overflow:auto;border:1px solid var(--line);border-radius:10px}
-  table{width:100%;border-collapse:collapse;min-width:940px;background:#fff}
+  table{width:100%;border-collapse:collapse;min-width:980px;background:#fff}
   thead th{position:sticky;top:0;background:#f8fafc;border-bottom:1px solid var(--line);text-align:left;font-size:12px;color:#475569;padding:8px}
   tbody td{border-bottom:1px solid var(--line);padding:8px;font-size:14px}
   tbody tr:hover{background:#f9fafb}
   .num{text-align:right;white-space:nowrap}
-
+  .ok{color:var(--ok)}
+  .warn{color:var(--amber)}
+  .danger{color:var(--red);font-weight:700}
+  .clickable{cursor:pointer}
   .chip{display:inline-flex;align-items:center;gap:6px;border:1px solid #e5e7eb;border-radius:999px;padding:6px 10px;background:#fff}
-  .ok{color:var(--ok)} .warn{color:var(--amber)} .danger{color:var(--red);font-weight:700}
 
-  /* layout dos “gráficos” (bar + lista sem mov) */
-  .charts{display:grid;grid-template-columns:1.2fr .8fr;gap:14px}
-  @media (max-width:900px){.charts{grid-template-columns:1fr}}
-  @media (max-width:600px){
-    #barTop{max-height:150px !important;}
-  }
+  /* modal linha (evolução do plano) */
+  #modal{display:none;position:fixed;inset:0;z-index:1000;align-items:center;justify-content:center}
+  #modal .backdrop{position:absolute;inset:0;background:rgba(0,0,0,.45)}
+  #modal .panel{position:relative;z-index:1;width:min(94vw,900px);max-height:88vh;overflow:auto;background:#fff;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.25);padding:12px}
+  #modal header{position:sticky;top:0;background:#fff;margin:-12px -12px 8px;padding:10px 12px;border-radius:12px 12px 0 0;box-shadow:0 1px 0 rgba(0,0,0,.06);display:flex;align-items:center;justify-content:space-between}
+  #modal h3{margin:0;font-size:16px}
+  #modal .close{appearance:none;border:none;background:transparent;font-size:22px;line-height:1;cursor:pointer;color:#334155}
 </style>
 </head>
 <body>
@@ -63,24 +70,18 @@
     <button id="aplicar">Aplicar</button>
   </div>
 
-  <!-- Resumo + bar + lista de planos sem movimentações -->
+  <!-- Gráfico de barras (top 10, prioridade críticos) -->
   <div class="charts">
     <div class="card">
-      <div class="title">Barras — Top 5 (R$ atual vs. mês anterior)</div>
-      <canvas id="barTop" height="180"></canvas>
-    </div>
-    <div class="card">
-      <div class="title">Planos sem movimentação no mês atual</div>
-      <ul id="listaSemMov" class="small" style="margin:0;padding-left:18px">
-        <li>Carregando…</li>
-      </ul>
+      <div class="title">Barras — Top 10 (R$ atual vs. mês anterior)</div>
+      <canvas id="barTop"></canvas>
     </div>
   </div>
 
   <!-- Planilha -->
   <div class="card">
-    <div class="title" id="titleTabela">Planos (mês atual × anterior)</div>
-    <div class="small">Regra de destaque: ≥ 90% do mês anterior fica <b class="danger">vermelho ⚠️</b>. Itens com ≥ 85% também entram na lista.</div>
+    <div class="title" id="titleTabela">Planos — mês atual × anterior</div>
+    <div class="small">Regra: ≥ 90% do mês anterior fica <b class="danger">vermelho ⚠️</b>. Itens com ≥ 85% ficam <b class="warn">laranja</b>. Clique na linha para ver a evolução do plano no ano.</div>
     <div class="table-wrap">
       <table>
         <thead>
@@ -92,7 +93,7 @@
             <th class="num">Valor mês atual (R$)</th>
             <th class="num">% do mês anterior</th>
             <th class="num">Falta p/ igualar (R$)</th>
-            <th class="num">Excedeu limite (R$)</th><!-- NOVA COLUNA -->
+            <th class="num">Excedeu limite (R$)</th>
             <th>Status</th>
           </tr>
         </thead>
@@ -104,6 +105,19 @@
   </div>
 
   <a href="javascript:void(0)" onclick="history.back()" class="chip" style="text-decoration:none;margin-top:6px">⬅ Voltar ao Painel</a>
+</div>
+
+<!-- Modal evolução plano -->
+<div id="modal" aria-hidden="true">
+  <div class="backdrop" data-close></div>
+  <div class="panel" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+    <header>
+      <h3 id="modal-title">Evolução do plano</h3>
+      <button class="close" title="Fechar" aria-label="Fechar" data-close>&times;</button>
+    </header>
+    <canvas id="line-evolucao" style="width:100%;height:260px"></canvas>
+    <div class="small" id="modal-note" style="margin-top:8px"></div>
+  </div>
 </div>
 
 <script>
@@ -126,7 +140,7 @@ function prevMonthStr(ym){
   return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`;
 }
 
-/* pega planos do retorno (usa .planosFonte9 ou grid/tabela) */
+/* pega planos do retorno (usa .planosFonte9 ou grid/tabela/fonte9Detalhe) */
 function extractPlanos(rec){
   if (Array.isArray(rec?.planosFonte9) && rec.planosFonte9.length){
     return rec.planosFonte9.map(p=>({nome:String(p.nome||'—'), valor:Math.abs(parseBR(p.valor))}));
@@ -167,40 +181,49 @@ const inpPeriodo=document.getElementById('periodo');
 const btnAplicar=document.getElementById('aplicar');
 const tbody=document.getElementById('tbodyPlanos');
 const titleTabela=document.getElementById('titleTabela');
-const ulSemMov=document.getElementById('listaSemMov');
 
-let bar;
+/* ===== Estado de gráficos ===== */
+let bar=null;
+let lineModal=null;
 
-/* monta lista: top 5 por gasto atual + qualquer outro com pct>=85% */
+/* ===== Construção das linhas (TODOS os planos + prioridade de risco) ===== */
 function buildRows(mapCurr, mapPrev, mesAtual, mesAnt){
   const nomes=new Set([...Object.keys(mapCurr),...Object.keys(mapPrev)]);
   const rows=[];
   nomes.forEach(nome=>{
-    const atual=mapCurr[nome]||0;
-    const antes=mapPrev[nome]||0;
-    const pct = antes>0 ? (atual/antes*100) : (atual>0?100:0);
-    const falta = Math.max(antes-atual, 0);
-    const excedeu = Math.max(atual-antes, 0); // NOVO
-    rows.push({ nome, antes, atual, pct, falta, excedeu, mesAnt, mesAtual });
+    const atual   = mapCurr[nome] || 0;
+    const antes   = mapPrev[nome] || 0;
+    const pct     = antes>0 ? (atual/antes*100) : (atual>0 ? 100 : 0);
+    const falta   = Math.max(antes - atual, 0);
+    const excedeu = Math.max(atual - antes, 0);
+
+    let tag='ok', priority=2;           // 0=vermelho, 1=laranja, 2=ok
+    if(pct>=90){ tag='red'; priority=0; }
+    else if(pct>=85){ tag='orange'; priority=1; }
+
+    rows.push({ nome, antes, atual, pct, falta, excedeu, mesAnt, mesAtual, tag, priority });
   });
-  // top 5 por atual
-  const top5=[...rows].sort((a,b)=>b.atual-a.atual).slice(0,5).map(r=>r.nome);
-  // + todos com pct >= 85%
-  const out = rows.filter(r=> top5.includes(r.nome) || r.pct>=85);
-  // ordena por gasto atual desc
-  return {selected: out.sort((a,b)=>b.atual-a.atual), all: rows};
+
+  // ordena: risco primeiro (vermelho, laranja, ok) e, dentro, maior % e valor atual
+  rows.sort((a,b)=>{
+    if (a.priority !== b.priority) return a.priority - b.priority;
+    if (b.pct !== a.pct) return b.pct - a.pct;
+    return b.atual - a.atual;
+  });
+
+  return rows;
 }
 
-/* renderiza tabela */
+/* ===== Tabela ===== */
 function renderTable(rows){
   if(!rows.length){
     tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Nada a mostrar para o período.</td></tr>`;
     return;
   }
-  tbody.innerHTML = rows.map(r=>{
-    const cls = r.pct>=90 ? 'danger' : (r.pct>=85 ? 'warn' : 'ok');
-    const status = r.pct>=90 ? '⚠️ Acima de 90%' : (r.pct>=85 ? '⚠️ 85%+' : 'OK');
-    return `<tr>
+  tbody.innerHTML = rows.map((r,i)=>{
+    const cls = r.tag==='red' ? 'danger' : (r.tag==='orange' ? 'warn' : 'ok');
+    const status = r.tag==='red' ? '⚠️ Acima de 90%' : (r.tag==='orange' ? '⚠️ 85%+' : 'OK');
+    return `<tr class="clickable" data-plan="${encodeURIComponent(r.nome)}">
       <td>${r.nome}</td>
       <td>${r.mesAnt}</td>
       <td class="num">${moeda(r.antes)}</td>
@@ -212,33 +235,82 @@ function renderTable(rows){
       <td class="${cls}">${status}</td>
     </tr>`;
   }).join('');
+
+  // clique para abrir modal
+  tbody.querySelectorAll('tr[data-plan]').forEach(tr=>{
+    tr.addEventListener('click',()=> openPlanModal(decodeURIComponent(tr.getAttribute('data-plan'))));
+  });
 }
 
-/* gráfico de barras simples */
+/* ===== Gráfico de barras (top 10 da lista já ordenada) ===== */
 function renderBar(rows){
-  const labels=rows.map(r=>r.nome);
-  const prev=rows.map(r=>r.antes);
-  const curr=rows.map(r=>r.atual);
+  const top = rows.slice(0,10);
+  const labels = top.map(r=>r.nome);
+  const prev   = top.map(r=>r.antes);
+  const curr   = top.map(r=>r.atual);
 
   if(bar) bar.destroy();
   bar=new Chart(document.getElementById('barTop'),{
     type:'bar',
     data:{labels, datasets:[
       {label:'Mês anterior', data:prev},
-      {label:'Mês atual', data:curr}
+      {label:'Mês atual',    data:curr}
     ]},
-    options:{responsive:true,plugins:{legend:{position:'top'}},scales:{y:{beginAtZero:true}}}
+    options:{
+      responsive:true,
+      plugins:{
+        legend:{position:'top'},
+        tooltip:{callbacks:{label:(ctx)=> `${ctx.dataset.label}: ${moeda(ctx.parsed.y||0)}`}}
+      },
+      scales:{y:{beginAtZero:true}}
+    }
   });
 }
 
-/* lista de planos sem movimentação neste mês (atual == 0) */
-function renderSemMov(allRows){
-  const sem = allRows.filter(r=>r.atual===0).sort((a,b)=>b.antes-a.antes);
-  if(!sem.length){
-    ulSemMov.innerHTML = '<li>Nenhum plano sem movimentação neste mês.</li>';
-    return;
-  }
-  ulSemMov.innerHTML = sem.map(r=>`<li><b>${r.nome}</b> — mês anterior: ${moeda(r.antes)}</li>`).join('');
+/* ===== Evolução do plano (modal) ===== */
+function monthLabel(i){ return String(i).padStart(2,'0'); }
+async function buildYearSeries(emp, year, planName){
+  const now=new Date(); const limitMonth = (year===now.getFullYear())? (now.getMonth()+1) : 12;
+  const months = Array.from({length:limitMonth}, (_,k)=> `${year}-${monthLabel(k+1)}`);
+  const results = await Promise.all(months.map(m=>getEmpresaPeriodo(emp, m)));
+  const serie = months.map((m,idx)=>{
+    const rec = results[idx]; const planos = extractPlanos(rec);
+    const found = planos.find(p=>norm(p.nome)===norm(planName));
+    return found ? Math.abs(parseBR(found.valor)) : 0;
+  });
+  return {labels: months.map(m=>m.split('-').reverse().join('/')), data: serie};
+}
+
+function closeModal(){ const m=document.getElementById('modal'); m.style.display='none'; m.setAttribute('aria-hidden','true'); }
+document.addEventListener('click',(e)=>{ if(e.target.matches('#modal [data-close], #modal .backdrop')) closeModal(); });
+
+async function openPlanModal(planName){
+  const emp = selEmpresa.value;
+  const per = (inpPeriodo.value || new Date().toISOString().slice(0,7));
+  const year = Number(per.split('-')[0]);
+
+  document.getElementById('modal-title').textContent = `Evolução — ${planName} (${year})`;
+  document.getElementById('modal-note').textContent  = 'Valores por mês no ano atual para o plano selecionado.';
+
+  // dados
+  const serie = await buildYearSeries(emp, year, planName);
+
+  const ctx = document.getElementById('line-evolucao').getContext('2d');
+  if(lineModal) { lineModal.destroy(); lineModal=null; }
+  lineModal = new Chart(ctx,{
+    type:'line',
+    data:{ labels: serie.labels, datasets:[{ label: planName, data: serie.data, tension:.25 }]},
+    options:{
+      responsive:true,
+      plugins:{ legend:{display:false}, tooltip:{ callbacks:{ label:(c)=> moeda(c.parsed.y||0) } } },
+      scales:{ y:{ beginAtZero:true } }
+    }
+  });
+
+  // abre modal
+  const modal=document.getElementById('modal');
+  modal.style.display='flex';
+  modal.setAttribute('aria-hidden','false');
 }
 
 /* ===== fluxo principal ===== */
@@ -249,11 +321,10 @@ async function run(){
 
   titleTabela.textContent=`Planos — ${per.split('-').reverse().join('/')} vs ${ant.split('-').reverse().join('/')}`;
   tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Carregando…</td></tr>`;
-  ulSemMov.innerHTML='<li>Carregando…</li>';
 
   try{
     const [curr, old] = await Promise.all([ getEmpresaPeriodo(emp, per), getEmpresaPeriodo(emp, ant) ]);
-    if(!curr || !old){ tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Sem dados.</td></tr>`; ulSemMov.innerHTML=''; return; }
+    if(!curr || !old){ tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Sem dados.</td></tr>`; return; }
 
     const planosCurr=extractPlanos(curr);
     const planosPrev=extractPlanos(old);
@@ -263,16 +334,14 @@ async function run(){
     const mesAtual = per.split('-').reverse().join('/');
     const mesAnt   = ant.split('-').reverse().join('/');
 
-    const {selected, all} = buildRows(mapCurr, mapPrev, mesAtual, mesAnt);
+    const rows = buildRows(mapCurr, mapPrev, mesAtual, mesAnt);
 
-    renderTable(selected);
-    renderBar(selected);
-    renderSemMov(all);
+    renderTable(rows);
+    renderBar(rows);
 
   }catch(e){
     console.error(e);
     tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Erro ao carregar. Tente novamente.</td></tr>`;
-    ulSemMov.innerHTML='';
   }
 }
 
