--- a/index.comparacao.html
+++ b/index.comparacao.html
@@ -9,7 +9,7 @@
   :root{
     --bg:#f6f8fb; --ink:#0f172a; --muted:#64748b; --card:#fff; --primary:#0ea5e9;
     --red:#dc2626; --amber:#f59e0b; --ok:#16a34a; --line:#e5e7eb;
-    --chart-h: 200px; /* altura padrão dos gráficos */
+    --chart-h: 200px;
   }
   *{box-sizing:border-box}
   body{margin:0;background:var(--bg);color:var(--ink);font-family:'Segoe UI',system-ui,-apple-system,sans-serif}
@@ -24,10 +24,9 @@
   .small{color:var(--muted);font-size:12px}
   .charts{display:grid;grid-template-columns:1fr;gap:14px}
   canvas{width:100%;height:var(--chart-h)}
-  /* celular: gráficos menores */
   @media (max-width:600px){ :root{ --chart-h: 150px; } }
 
-  /* tabela estilo planilha */
+  /* tabela */
   .table-wrap{overflow:auto;border:1px solid var(--line);border-radius:10px}
   table{width:100%;border-collapse:collapse;min-width:980px;background:#fff}
   thead th{position:sticky;top:0;background:#f8fafc;border-bottom:1px solid var(--line);text-align:left;font-size:12px;color:#475569;padding:8px}
@@ -37,16 +36,22 @@
   .ok{color:var(--ok)}
   .warn{color:var(--amber)}
   .danger{color:var(--red);font-weight:700}
+  .neg{color:var(--red);font-weight:600}
   .clickable{cursor:pointer}
   .chip{display:inline-flex;align-items:center;gap:6px;border:1px solid #e5e7eb;border-radius:999px;padding:6px 10px;background:#fff}
 
-  /* modal linha (evolução do plano) */
+  /* modal linha */
   #modal{display:none;position:fixed;inset:0;z-index:1000;align-items:center;justify-content:center}
   #modal .backdrop{position:absolute;inset:0;background:rgba(0,0,0,.45)}
   #modal .panel{position:relative;z-index:1;width:min(94vw,900px);max-height:88vh;overflow:auto;background:#fff;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,.25);padding:12px}
   #modal header{position:sticky;top:0;background:#fff;margin:-12px -12px 8px;padding:10px 12px;border-radius:12px 12px 0 0;box-shadow:0 1px 0 rgba(0,0,0,.06);display:flex;align-items:center;justify-content:space-between}
   #modal h3{margin:0;font-size:16px}
   #modal .close{appearance:none;border:none;background:transparent;font-size:22px;line-height:1;cursor:pointer;color:#334155}
+
+  /* box com rolagem para "sem movimentação" */
+  .scrollbox{max-height:280px;overflow:auto;border:1px dashed #e5e7eb;border-radius:10px;padding:10px;background:#fff}
+  .scrollbox ul{margin:0;padding-left:18px}
+  .scrollbox li+li{margin-top:6px}
 </style>
 </head>
 <body>
@@ -70,7 +75,7 @@
     <button id="aplicar">Aplicar</button>
   </div>
 
-  <!-- Gráfico de barras (top 10, prioridade críticos) -->
+  <!-- Gráfico -->
   <div class="charts">
     <div class="card">
       <div class="title">Barras — Top 10 (R$ atual vs. mês anterior)</div>
@@ -81,7 +86,7 @@
   <!-- Planilha -->
   <div class="card">
     <div class="title" id="titleTabela">Planos — mês atual × anterior</div>
-    <div class="small">Regra: ≥ 90% do mês anterior fica <b class="danger">vermelho ⚠️</b>. Itens com ≥ 85% ficam <b class="warn">laranja</b>. Clique na linha para ver a evolução do plano no ano.</div>
+    <div class="small">Regra: ≥ 90% do mês anterior fica <b class="danger">vermelho ⚠️</b>. Itens com ≥ 85% ficam <b class="warn">laranja</b>. <u>Excedeu limite</u> aparece como valor negativo (o quanto passou).</div>
     <div class="table-wrap">
       <table>
         <thead>
@@ -101,6 +106,14 @@
           <tr><td colspan="9" class="small" style="padding:12px">Carregando…</td></tr>
         </tbody>
       </table>
+    </div>
+  </div>
+
+  <!-- Sem movimentação -->
+  <div class="card">
+    <div class="title">Planos sem movimentação no mês atual</div>
+    <div class="scrollbox">
+      <ul id="listaSemMov"><li class="small">Carregando…</li></ul>
     </div>
   </div>
 
@@ -140,7 +153,7 @@ function prevMonthStr(ym){
   return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`;
 }
 
-/* pega planos do retorno (usa .planosFonte9 ou grid/tabela/fonte9Detalhe) */
+/* pega planos */
 function extractPlanos(rec){
   if (Array.isArray(rec?.planosFonte9) && rec.planosFonte9.length){
     return rec.planosFonte9.map(p=>({nome:String(p.nome||'—'), valor:Math.abs(parseBR(p.valor))}));
@@ -181,12 +194,11 @@ const inpPeriodo=document.getElementById('periodo');
 const btnAplicar=document.getElementById('aplicar');
 const tbody=document.getElementById('tbodyPlanos');
 const titleTabela=document.getElementById('titleTabela');
+const ulSemMov=document.getElementById('listaSemMov');
 
-/* ===== Estado de gráficos ===== */
-let bar=null;
-let lineModal=null;
+let bar=null, lineModal=null;
 
-/* ===== Construção das linhas (TODOS os planos + prioridade de risco) ===== */
+/* ===== linhas (com excedeu negativo) ===== */
 function buildRows(mapCurr, mapPrev, mesAtual, mesAnt){
   const nomes=new Set([...Object.keys(mapCurr),...Object.keys(mapPrev)]);
   const rows=[];
@@ -195,16 +207,15 @@ function buildRows(mapCurr, mapPrev, mesAtual, mesAnt){
     const antes   = mapPrev[nome] || 0;
     const pct     = antes>0 ? (atual/antes*100) : (atual>0 ? 100 : 0);
     const falta   = Math.max(antes - atual, 0);
-    const excedeu = Math.max(atual - antes, 0);
+    const excedeu = (atual>antes) ? -(atual-antes) : 0;   // NEGATIVO quando passou
 
-    let tag='ok', priority=2;           // 0=vermelho, 1=laranja, 2=ok
+    let tag='ok', priority=2;
     if(pct>=90){ tag='red'; priority=0; }
     else if(pct>=85){ tag='orange'; priority=1; }
 
     rows.push({ nome, antes, atual, pct, falta, excedeu, mesAnt, mesAtual, tag, priority });
   });
 
-  // ordena: risco primeiro (vermelho, laranja, ok) e, dentro, maior % e valor atual
   rows.sort((a,b)=>{
     if (a.priority !== b.priority) return a.priority - b.priority;
     if (b.pct !== a.pct) return b.pct - a.pct;
@@ -214,13 +225,13 @@ function buildRows(mapCurr, mapPrev, mesAtual, mesAnt){
   return rows;
 }
 
-/* ===== Tabela ===== */
+/* ===== tabela ===== */
 function renderTable(rows){
   if(!rows.length){
     tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Nada a mostrar para o período.</td></tr>`;
     return;
   }
-  tbody.innerHTML = rows.map((r,i)=>{
+  tbody.innerHTML = rows.map(r=>{
     const cls = r.tag==='red' ? 'danger' : (r.tag==='orange' ? 'warn' : 'ok');
     const status = r.tag==='red' ? '⚠️ Acima de 90%' : (r.tag==='orange' ? '⚠️ 85%+' : 'OK');
     return `<tr class="clickable" data-plan="${encodeURIComponent(r.nome)}">
@@ -231,18 +242,17 @@ function renderTable(rows){
       <td class="num">${moeda(r.atual)}</td>
       <td class="num ${cls}">${r.pct.toFixed(1)}%</td>
       <td class="num">${moeda(r.falta)}</td>
-      <td class="num">${moeda(r.excedeu)}</td>
+      <td class="num ${r.excedeu<0?'neg':''}">${moeda(r.excedeu)}</td>
       <td class="${cls}">${status}</td>
     </tr>`;
   }).join('');
 
-  // clique para abrir modal
   tbody.querySelectorAll('tr[data-plan]').forEach(tr=>{
     tr.addEventListener('click',()=> openPlanModal(decodeURIComponent(tr.getAttribute('data-plan'))));
   });
 }
 
-/* ===== Gráfico de barras (top 10 da lista já ordenada) ===== */
+/* ===== gráfico barras ===== */
 function renderBar(rows){
   const top = rows.slice(0,10);
   const labels = top.map(r=>r.nome);
@@ -267,7 +277,17 @@ function renderBar(rows){
   });
 }
 
-/* ===== Evolução do plano (modal) ===== */
+/* ===== lista sem movimentação (atual==0) com rolagem ===== */
+function renderSemMov(rows){
+  const sem = rows.filter(r=> r.atual===0);
+  if(!sem.length){ ulSemMov.innerHTML = `<li class="small">Sem itens sem movimentação neste mês.</li>`; return; }
+  ulSemMov.innerHTML = sem
+    .sort((a,b)=>b.antes-a.antes)
+    .map(r=>`<li><b>${r.nome}</b> — mês anterior: ${moeda(r.antes)}</li>`)
+    .join('');
+}
+
+/* ===== modal evolução ===== */
 function monthLabel(i){ return String(i).padStart(2,'0'); }
 async function buildYearSeries(emp, year, planName){
   const now=new Date(); const limitMonth = (year===now.getFullYear())? (now.getMonth()+1) : 12;
@@ -280,7 +300,6 @@ async function buildYearSeries(emp, year, planName){
   });
   return {labels: months.map(m=>m.split('-').reverse().join('/')), data: serie};
 }
-
 function closeModal(){ const m=document.getElementById('modal'); m.style.display='none'; m.setAttribute('aria-hidden','true'); }
 document.addEventListener('click',(e)=>{ if(e.target.matches('#modal [data-close], #modal .backdrop')) closeModal(); });
 
@@ -292,9 +311,7 @@ async function openPlanModal(planName){
   document.getElementById('modal-title').textContent = `Evolução — ${planName} (${year})`;
   document.getElementById('modal-note').textContent  = 'Valores por mês no ano atual para o plano selecionado.';
 
-  // dados
   const serie = await buildYearSeries(emp, year, planName);
-
   const ctx = document.getElementById('line-evolucao').getContext('2d');
   if(lineModal) { lineModal.destroy(); lineModal=null; }
   lineModal = new Chart(ctx,{
@@ -307,7 +324,6 @@ async function openPlanModal(planName){
     }
   });
 
-  // abre modal
   const modal=document.getElementById('modal');
   modal.style.display='flex';
   modal.setAttribute('aria-hidden','false');
@@ -321,10 +337,15 @@ async function run(){
 
   titleTabela.textContent=`Planos — ${per.split('-').reverse().join('/')} vs ${ant.split('-').reverse().join('/')}`;
   tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Carregando…</td></tr>`;
+  ulSemMov.innerHTML='<li class="small">Carregando…</li>';
 
   try{
     const [curr, old] = await Promise.all([ getEmpresaPeriodo(emp, per), getEmpresaPeriodo(emp, ant) ]);
-    if(!curr || !old){ tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Sem dados.</td></tr>`; return; }
+    if(!curr || !old){
+      tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Sem dados.</td></tr>`;
+      ulSemMov.innerHTML=`<li class="small">Sem dados.</li>`;
+      return;
+    }
 
     const planosCurr=extractPlanos(curr);
     const planosPrev=extractPlanos(old);
@@ -338,10 +359,12 @@ async function run(){
 
     renderTable(rows);
     renderBar(rows);
+    renderSemMov(rows);
 
   }catch(e){
     console.error(e);
     tbody.innerHTML=`<tr><td colspan="9" class="small" style="padding:12px">Erro ao carregar. Tente novamente.</td></tr>`;
+    ulSemMov.innerHTML=`<li class="small">Erro ao carregar.</li>`;
   }
 }
 
@@ -349,8 +372,8 @@ async function run(){
 btnAplicar.addEventListener('click', run);
 window.addEventListener('DOMContentLoaded', ()=>{
   const d=new Date();
-  document.getElementById('periodo').value=d.toISOString().slice(0,7); // padrão: mês atual
-  run(); // compara automaticamente com o mês anterior
+  document.getElementById('periodo').value=d.toISOString().slice(0,7);
+  run();
 });
 </script>
 </body>
