--- a/index.travas.html
+++ b/index.travas.html
@@ -105,7 +105,7 @@
      style="background:#0ea5e9; color:#fff; padding:10px 20px; 
             border-radius:8px; text-decoration:none; font-weight:600; 
             display:inline-block;">
-    Ir para Comparação
+    Análisar planos de contas
     </a>
   </div>
 </div> <!-- Fim da .wrap -->
