--- a/index.comparacao.html
+++ b/index.comparacao.html
@@ -78,7 +78,7 @@
   <!-- Gráfico -->
   <div class="charts">
     <div class="card">
-      <div class="title">Barras — Top 10 (R$ atual vs. mês anterior)</div>
+       <div class="title">Top 10 Planos com maior aumento (R$ atual vs. mês anterior)</div>
       <canvas id="barTop"></canvas>
     </div>
   </div>
