--- a/index.travas.html
+++ b/index.travas.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
-<title>CB Systems • Painel de Travas</title>
+<title>GRUPO DV</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
   :root{
@@ -79,7 +79,7 @@
 </style>
 </head>
 <body>
-<header>CB Systems • Painel de Travas</header>
+<header>GRUPO DV</header>
 
 <div class="wrap">
   <div class="filters">
