--- a/index.comparacao.html
+++ b/index.comparacao.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8">
-<title>CB Systems • Comparativo (mês atual × anterior)</title>
+<title>GRUPO DV • Comparativos com planos de contas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
@@ -55,7 +55,7 @@
 </style>
 </head>
 <body>
-<header>CB Systems • Comparativo (mês atual × anterior)</header>
+<header>GRUPO DV • Comparativos com planos de contas</header>
 
 <div class="wrap">
   <!-- Filtros -->
