--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
       <div class="icon">🔎</div>
       <h2>Pesquisa de satisfação</h2>
     </a>
+  <a class="card" href="index.reservas.html">
+      <div class="icon">🗓️</div>
+      <h2>Reservas Mercatto</h2>
+    </a>
   </div>
 
   <!-- Script splash -->
