--- a/index.abc.html
+++ b/index.abc.html
@@ -13,38 +13,90 @@
     --brand:#2563eb; --ok:#16a34a; --warn:#b45309; --danger:#ef4444;
     --radius:16px; --shadow:0 12px 28px rgba(2,6,23,.06);
   }
+  /* ===== Base ===== */
   *{box-sizing:border-box}
-  body{margin:0;font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;background:var(--bg);color:var(--text)}
-  header{display:flex;align-items:center;gap:16px;padding:16px 20px;background:#fff;border-bottom:1px solid var(--line)}
-  header img{height:56px}
-  header h1{margin:0;font-size:1.25rem;font-weight:700;letter-spacing:.2px}
-  .container{max-width:1200px;margin:26px auto;padding:0 16px}
-  .grid{display:grid;gap:16px}
-  .filters{grid-template-columns:repeat(4,minmax(0,1fr))}
-  @media (max-width:900px){.filters{grid-template-columns:1fr 1fr}.kpis{grid-template-columns:1fr 1fr}}
-  @media (max-width:600px){.filters{grid-template-columns:1fr}.kpis{grid-template-columns:1fr}}
-  .card{background:var(--card);border:1px solid var(--line);border-radius:var(--radius);box-shadow:var(--shadow)}
-  .card.pad{padding:16px}
-  label{font-weight:600;font-size:.85rem;color:#111827;margin-bottom:6px;display:block}
-  select,input[type="date"],input[type="text"]{width:100%;padding:10px 12px;border:1px solid var(--line);border-radius:10px;background:#fff;font-size:.95rem}
-  .kpi{padding:16px}
-  .kpi h3{margin:0 0 6px;font-size:.8rem;color:var(--muted);font-weight:600}
-  .kpi p{margin:0;font-size:1.4rem;font-weight:800}
-  .section-title{margin:18px 4px 10px;font-size:.95rem;color:#111827;font-weight:700}
-  #graficoVendas{display:none;padding:16px}
-  .lists{grid-template-columns:repeat(3,minmax(0,1fr))}
-  .item{padding:10px 12px;border:1px dashed var(--line);border-radius:12px;margin-bottom:10px;background:#fff}
-  .muted{color:var(--muted)}
-  .ok{background:#ecfdf5;border-left:6px solid var(--ok)}
-  .warn{background:#fef3c7;border-left:6px solid var(--warn)}
-  .danger{background:#fee2e2;border-left:6px solid var(--danger)}
-  .loader{display:flex;align-items:center;justify-content:center;gap:10px;padding:28px;color:var(--muted)}
-  .spinner{width:18px;height:18px;border:3px solid var(--line);border-top-color:var(--brand);border-radius:50%;animation:spin .8s linear infinite}
-  @keyframes spin{to{transform:rotate(360deg)}}
-  .empty,.error{padding:18px;margin:8px 0;border-radius:12px;border:1px solid var(--line);background:#fff}
-  .error{border-color:#fecaca;background:#fff1f2;color:#991b1b}
-  .chips{display:flex;flex-wrap:wrap;gap:8px;margin:8px 0}
-  .chip{font-size:.75rem;padding:6px 10px;border-radius:999px;background:#eef2ff;color:#3730a3;border:1px solid #c7d2fe}
+  html, body { height:100%; }
+  body{
+    margin:0; font-family:Inter,system-ui,Segoe UI,Arial,sans-serif;
+    background:var(--bg); color:var(--text);
+    overflow-x:hidden; /* nunca corta lateral */
+  }
+
+  /* ===== Header fixo e layout tela cheia ===== */
+  header{
+    position:sticky; top:0; z-index:10;
+    display:flex; align-items:center; gap:16px;
+    padding:14px 20px; background:#fff; border-bottom:1px solid var(--line);
+  }
+  header img{ height:56px; max-width:100%; }
+  header h1{ margin:0; font-size:clamp(1.05rem, 1.2vw + .8rem, 1.6rem); font-weight:700; letter-spacing:.2px }
+
+  .page{
+    min-height:calc(100vh - 86px); /* ocupa a tela toda abaixo do header */
+    width:100vw; max-width:100vw;
+  }
+
+  /* ===== Container fluido (100% desktop) ===== */
+  .container{
+    width:100%; max-width:100%; padding:18px 20px 28px; margin:0 auto;
+  }
+
+  /* ===== Grids ===== */
+  .grid{ display:grid; gap:16px }
+  /* desktop grande: 6 col nas filtros, 3 col nas listas */
+  .filters{ grid-template-columns:repeat(6, minmax(0,1fr)); }
+  .lists{ grid-template-columns:repeat(3, minmax(0,1fr)); }
+
+  /* tablets */
+  @media (max-width:1200px){
+    .filters{ grid-template-columns:repeat(4, minmax(0,1fr)); }
+    .lists{ grid-template-columns:repeat(2, minmax(0,1fr)); }
+  }
+  /* mobile */
+  @media (max-width:768px){
+    .filters{ grid-template-columns:1fr; }
+    .lists{ grid-template-columns:1fr; }
+    .container{ padding:14px 12px 22px; }
+  }
+
+  /* ===== Cards/KPIs ===== */
+  .card{ background:var(--card); border:1px solid var(--line);
+         border-radius:var(--radius); box-shadow:var(--shadow); overflow:visible }
+  .card.pad{ padding:14px }
+  label{ font-weight:600; font-size:.9rem; color:#111827; margin-bottom:6px; display:block }
+  select,input[type="date"],input[type="text"]{
+    width:100%; padding:10px 12px; border:1px solid var(--line); border-radius:10px; background:#fff; font-size:.95rem
+  }
+
+  .kpis{ display:grid; grid-template-columns:repeat(4,minmax(0,1fr)); gap:16px; margin-top:16px }
+  @media (max-width:1200px){ .kpis{ grid-template-columns:repeat(2,minmax(0,1fr)); } }
+  @media (max-width:768px){ .kpis{ grid-template-columns:1fr; } }
+  .kpi{ padding:16px }
+  .kpi h3{ margin:0 0 6px; font-size:.85rem; color:var(--muted); font-weight:600 }
+  .kpi p{ margin:0; font-size:clamp(1.1rem, 1.2vw + .9rem, 1.6rem); font-weight:800; line-height:1.2 }
+
+  .section-title{ margin:18px 4px 10px; font-size:.95rem; color:#111827; font-weight:700 }
+
+  /* ===== Gráfico responsivo sem corte ===== */
+  #wrapGraf{ padding:10px }
+  #graficoVendas{
+    display:none;
+    width:100% !important; height:auto !important;
+    max-width:1600px; margin:0 auto 10px;
+  }
+  canvas{ max-width:100%; height:auto !important; }
+
+  /* ===== Listas ===== */
+  .item{ padding:10px 12px; border:1px dashed var(--line); border-radius:12px; margin-bottom:10px; background:#fff;
+         word-break:break-word; overflow-wrap:anywhere; }
+  .muted{ color:var(--muted) }
+
+  /* ===== Estados / feedback ===== */
+  .loader{ display:flex; align-items:center; justify-content:center; gap:10px; padding:22px; color:var(--muted) }
+  .spinner{ width:18px; height:18px; border:3px solid var(--line); border-top-color:var(--brand); border-radius:50%; animation:spin .8s linear infinite }
+  @keyframes spin{ to{ transform:rotate(360deg) } }
+  .empty,.error{ padding:18px; margin:8px 0; border-radius:12px; border:1px solid var(--line); background:#fff }
+  .error{ border-color:#fecaca; background:#fff1f2; color:#991b1b }
 </style>
 </head>
 <body>
@@ -53,56 +105,69 @@
   <h1>ABC de Vendas • Grupo DV</h1>
 </header>
 
-<div class="container">
-  <!-- Filtros -->
-  <div class="grid filters">
-    <div class="card pad">
-      <label>🏢 Empresa</label>
-      <select id="filtroEmpresa"><option value="">Todas</option></select>
+<div class="page">
+  <div class="container">
+    <!-- Filtros -->
+    <div class="grid filters">
+      <div class="card pad">
+        <label>🏢 Empresa</label>
+        <select id="filtroEmpresa"><option value="">Todas</option></select>
+      </div>
+      <div class="card pad">
+        <label>🔍 Busca</label>
+        <input id="filtroBusca" type="text" placeholder="Produto..." />
+      </div>
+      <div class="card pad">
+        <label>📅 Início</label>
+        <input id="dataInicio" type="date" />
+      </div>
+      <div class="card pad">
+        <label>📅 Fim</label>
+        <input id="dataFim" type="date" />
+      </div>
+      <!-- Espaços extras preenchem e mantêm 6 colunas sem “quebrar” no desktop -->
+      <div class="card pad" style="visibility:hidden"></div>
+      <div class="card pad" style="visibility:hidden"></div>
     </div>
-    <div class="card pad">
-      <label>🔍 Busca</label>
-      <input id="filtroBusca" type="text" placeholder="Produto..." />
-    </div>
-    <div class="card pad">
-      <label>📅 Início</label>
-      <input id="dataInicio" type="date" />
-    </div>
-    <div class="card pad">
-      <label>📅 Fim</label>
-      <input id="dataFim" type="date" />
-    </div>
-  </div>
 
-  <!-- KPIs -->
-  <div class="grid kpis" style="margin-top:16px">
-    <div class="card kpi">
-      <h3>Faturamento</h3>
-      <p id="kpiFat">R$ 0,00</p>
+    <!-- KPIs -->
+    <div class="kpis">
+      <div class="card kpi">
+        <h3>Faturamento</h3>
+        <p id="kpiFat">R$ 0,00</p>
+      </div>
+      <div class="card kpi">
+        <h3>Lucro</h3>
+        <p id="kpiLuc">R$ 0,00</p>
+      </div>
+      <div class="card kpi">
+        <h3>Qtd. Registros</h3>
+        <p id="kpiQtd">0</p>
+      </div>
+      <div class="card kpi">
+        <h3>Ticket Médio</h3>
+        <p id="kpiTicket">R$ 0,00</p>
+      </div>
     </div>
-    <div class="card kpi">
-      <h3>Lucro</h3>
-      <p id="kpiLuc">R$ 0,00</p>
+
+    <!-- Gráfico -->
+    <div class="card" id="wrapGraf">
+      <canvas id="graficoVendas"></canvas>
     </div>
-  </div>
 
-  <!-- Gráfico -->
-  <div class="card" id="wrapGraf">
-    <canvas id="graficoVendas"></canvas>
-  </div>
+    <!-- Listas -->
+    <div class="section-title">Análises</div>
+    <div class="grid lists">
+      <div class="card pad"><h3 class="muted" style="margin:0 0 10px">⭐ Top Produtos</h3><div id="topVendidos"></div></div>
+      <div class="card pad"><h3 class="muted" style="margin:0 0 10px">💰 Mais Lucrativos</h3><div id="maisLucro"></div></div>
+      <div class="card pad"><h3 class="muted" style="margin:0 0 10px">📉 Menos Lucrativos</h3><div id="menosLucro"></div></div>
+    </div>
 
-  <!-- Listas -->
-  <div class="section-title">Análises</div>
-  <div class="grid lists">
-    <div class="card pad"><h3 class="muted" style="margin:0 0 10px">⭐ Top Produtos</h3><div id="topVendidos"></div></div>
-    <div class="card pad"><h3 class="muted" style="margin:0 0 10px">💰 Mais Lucrativos</h3><div id="maisLucro"></div></div>
-    <div class="card pad"><h3 class="muted" style="margin:0 0 10px">📉 Menos Lucrativos</h3><div id="menosLucro"></div></div>
-  </div>
-
-  <div class="section-title">Registros</div>
-  <div class="card pad">
-    <div id="statusBox" class="loader"><div class="spinner"></div> Carregando dados…</div>
-    <div id="listaVendas" style="display:none"></div>
+    <div class="section-title">Registros</div>
+    <div class="card pad">
+      <div id="statusBox" class="loader"><div class="spinner"></div> Carregando dados…</div>
+      <div id="listaVendas" style="display:none"></div>
+    </div>
   </div>
 </div>
 
@@ -127,11 +192,10 @@ async function fetchABC(){
 
   try{
     const res = await fetch(URL_SCRIPT, { method:'GET' });
-    const txt = await res.text(); // para diagnosticar erros de CORS/HTML
+    const txt = await res.text();
     let json;
     try { json = JSON.parse(txt); } catch(e){ throw new Error('Resposta inválida do servidor:\n' + txt.slice(0,300)); }
 
-    // Aceita {ok,dados} ou array puro
     const arr = Array.isArray(json) ? json : (json.dados || []);
     if (!arr.length) {
       box.className='empty';
@@ -158,10 +222,8 @@ function preencherEmpresas(arr){
 function setDatasPorFaixa(arr){
   const datas = arr.map(d=>d.data).filter(Boolean).sort();
   if (!datas.length) return;
-  const min = datas[0];
-  const max = datas[datas.length-1];
-  $$('#dataInicio').value = min;
-  $$('#dataFim').value    = max;
+  $$('#dataInicio').value = datas[0];
+  $$('#dataFim').value    = datas[datas.length-1];
 }
 
 /* =================== RENDER =================== */
@@ -179,16 +241,18 @@ function aplicar(){
     return true;
   });
 
-  // KPIs
   const fat = F.reduce((s,x)=>s+(x.faturamento||0),0);
   const luc = F.reduce((s,x)=>s+(x.lucro||0),0);
+  const qtd = F.length;
+  const ticket = qtd ? (fat / qtd) : 0;
+
   $$('#kpiFat').textContent = BRL(fat);
   $$('#kpiLuc').textContent = BRL(luc);
+  $$('#kpiQtd').textContent = qtd.toLocaleString('pt-BR');
+  $$('#kpiTicket').textContent = BRL(ticket);
 
-  // Gráfico diário (se empresa selecionada)
   desenharGrafico(F, !!empresa);
 
-  // Análises
   const byProd = {};
   F.forEach(x=>{
     const p = x.produto||'';
@@ -203,7 +267,6 @@ function aplicar(){
   renderLista('#maisLucro',     [...arr].sort((a,b)=>b.l-a.l).slice(0,5), p=>`💰 ${p.produto} — ${BRL(p.l)}`);
   renderLista('#menosLucro',    [...arr].sort((a,b)=>a.l-b.l).slice(0,5), p=>`📉 ${p.produto} — ${BRL(p.l)}`);
 
-  // Tabela simples (agrupado por produto/empresa)
   const agrup = {};
   F.forEach(x=>{
     const key = `${x.produto}__${x.empresa}`;
@@ -253,7 +316,10 @@ function desenharGrafico(F, mostrar){
   chartVendas = new Chart(canvas.getContext('2d'), {
     type:'line',
     data:{ labels:labels.map(dBR), datasets:[{ label:'Faturamento por dia', data:vals, fill:true, borderColor:'#2563eb', backgroundColor:'rgba(37,99,235,.15)', pointRadius:4, pointHoverRadius:6 }] },
-    options:{ responsive:true, plugins:{ legend:{display:false}, title:{display:true,text:'Evolução de Vendas'} } }
+    options:{ responsive:true, maintainAspectRatio:false,
+      scales:{ y:{ beginAtZero:true } },
+      plugins:{ legend:{display:false}, title:{display:true,text:'Evolução de Vendas'} }
+    }
   });
   canvas.style.display='block';
 }
